2006-09-28  Dave Hyatt  <hyatt@apple.com>

        Just eliminate MapWindowPoints usage and use the HWND as
        the viewport.

        * platform/win/MouseEventWin.cpp:
        (WebCore::positionForEvent):
        * platform/win/ScrollViewWin.cpp:
        (WebCore::ScrollView::viewportToContents):
        (WebCore::ScrollView::contentsToViewport):

2006-09-27  David Hyatt  <hyatt@apple.com>

        Fix for bug 9222, cursor is wrong when mousing over overflow scrollbars in textareas.  Make sure
        selectCursor checks for whether or not a scrollbar was hit.  Also stub out a mouseMoved method for
        scrollbars to provide hover feedback if needed.

        Reviewed by Eric

        * page/FrameView.cpp:
        (WebCore::selectCursor):
        (WebCore::FrameView::handleMouseMoveEvent):
        * platform/ScrollBar.h:
        (WebCore::ScrollBar::mouseMoved):

2006-09-27  MorganL  <morganl.webkit@yahoo.com>

        Reviewed by Maciej and Adam, landed by Adam

        Fixes: http://bugzilla.opendarwin.org/show_bug.cgi?id=11072
        Windows build is busted

        * platform/win/TemporaryLinkStubs.cpp:
        (ScrollView::paint):
        (ScrollView::themeChanged):

2006-09-27  Eric Seidel  <eric@eseidel.com>

        Reviewed by mitz.

        paths with no fill specified default to black but do not recieve paint-related mouse events
        http://bugzilla.opendarwin.org/show_bug.cgi?id=11069
        The default fill was being applied at the wrong place in the rendering chain, causing this problem.

        Test: svg/custom/hover-default-fill.svg

        * kcanvas/RenderPath.cpp:
        (WebCore::RenderPath::nodeAtPoint): use isFilled and isStroked
        * ksvg2/css/SVGRenderStyle.h: use defaultFill() and defaultStroke()
        * ksvg2/misc/KCanvasRenderingStyle.cpp:
        (WebCore::KSVGPainterFactory::isFilled): remove null check
        (WebCore::KSVGPainterFactory::fillPaintServer): remove null check