@@ -1009,7 +1009,7 @@ void IconDatabase::forgetPageURLQuery(SQLDatabase& db, const String& pageURL)
     readySQLStatement(m_forgetPageURLStatement, db, "DELETE FROM PageURL WHERE url = (?);");
     m_forgetPageURLStatement->bindText16(1, pageURL, false);
 
-    if (m_forgetPageURLStatement->step() != SQLResultOk)
+    if (m_forgetPageURLStatement->step() != SQLResultDone)
         LOG_ERROR("forgetPageURLQuery failed");
     
     m_forgetPageURLStatement->reset();
@@ -1021,7 +1021,7 @@ void IconDatabase::setIconIDForPageURLQuery(SQLDatabase& db, int64_t iconID, con
     m_setIconIDForPageURLStatement->bindText16(1, pageURL, false);
     m_setIconIDForPageURLStatement->bindInt64(2, iconID);
 
-    if (m_setIconIDForPageURLStatement->step() != SQLResultOk)
+    if (m_setIconIDForPageURLStatement->step() != SQLResultDone)
         LOG_ERROR("setIconIDForPageURLQuery failed");
 
     m_setIconIDForPageURLStatement->reset();
@@ -1051,7 +1051,7 @@ int64_t IconDatabase::addIconForIconURLQuery(SQLDatabase& db, const String& icon
     m_addIconForIconURLStatement->bindText16(1, iconURL, false);
     
     int64_t result = m_addIconForIconURLStatement->step();
-    if (result== SQLResultOk)
+    if (result == SQLResultDone)
         result = db.lastInsertRowID();
     else {
         LOG_ERROR("addIconForIconURLQuery failed");
